--- a/index.html
+++ b/index.html
@@ -1,1 +1,88 @@
-No Content: https://gnhustgames.github.io/tabletennis-worldtour/
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BTL6D79ZZ4"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-BTL6D79ZZ4');
+    </script>
+    <title>Table Tennis World Tour Unblocked - GNHUSTGames</title>
+    <meta name="description" content="Serve, spin, and smash your way to victory in Table Tennis World Tour! Compete in intense matches across diverse locations, hone your skills, and rise through the ranks to become a table tennis champion. Experience realistic gameplay and thrilling challenges in this ultimate table tennis simulation. Start your journey now!">
+    <link rel="stylesheet" href="https://gnhustgames.github.io/css/logo.css">
+    <meta charset="utf-8">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="viewport" content="initial-scale=1.0,maximum-scale=1.01, minimal-ui" />
+    </script>
+    <style>
+        body {
+            margin: 0px;
+            padding: 0px;
+            width: 100%;
+            overflow: hidden;
+            background-color: black;
+        }
+        
+        canvas {
+            -ms-touch-action: none;
+            image-rendering: -o-crisp-edges;
+            image-rendering: optimize-contrast;
+            -ms-interpolation-mode: nearest-neighbor;
+            -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+            -moz-tap-highlight-color: rgba(0, 0, 0, 0);
+            tap-highlight-color: rgba(0, 0, 0, 0);
+            user-select: none;
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+        }
+    </style>
+
+    <script>
+        // Package-ID
+        window.famobi_gameID = "table-tennis-world-tour";
+        window.famobi_gameJS = [
+            "TweenMax.min.js",
+            "Howler.min.js",
+            "VisibilityManager.js",
+            "app.js",
+            function() {
+                fenster.subscribeToOffsetUpdates(() => {
+                    resizeCanvas();
+                });
+                if (window.famobi.config.aid !== "A-CRAZYGAMES") {
+                    window.famobi.config.features.lockPointer = false;
+                }
+                extGameLoad();
+            }
+        ];
+
+        (function(document, url, fgJS, firstJS) {
+            fgJS = document.createElement('script');
+            firstJS = document.getElementsByTagName('script')[0];
+            fgJS.src = url + encodeURIComponent(document.location.href);
+            firstJS.parentNode.insertBefore(fgJS, firstJS);
+        })(document, 'js/start.js?e=');
+    </script>
+
+</head>
+
+<body>
+    <div class="logo-homepage" id="logo">
+
+            </button></a>
+    </div>
+    <div id="canvas-wrapper" style="overflow:hidden; width:100%; height:100%; margin:0; padding:0; position:absolute;">
+        <canvas id="canvas" moz-opaque></canvas>
+    </div>
+</body>
+
+</html>
